DropdownWidget: Prevent label from overflowing the handle

--- a/src/styles/widgets/DropdownWidget.less
+++ b/src/styles/widgets/DropdownWidget.less
@@ -7,6 +7,9 @@
 	&-handle {
 		width: 100%;
 		display: inline-block;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 
 		.oo-ui-unselectable();
 		.oo-ui-box-sizing( border-box );
